<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="vieeews">234</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">post_text</string>
    <string name="error_empty_content">err</string>
    <string name="Cancel">Cancel edit</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">add post</string>
</resources>